force-app/main/default/objects/oFieldLabel__c/oFieldLabel__c.object-meta.xml
<CustomObject>
    <label>oFieldLabel</label>
    <nameField>
        <label>oFieldLabel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>oFieldLabels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>