force-app/main/default/objects/oFieldLabel__c/fields/FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>FieldLabel__c</fullName>
    <label>FieldLabel</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>