force-app/main/default/objects/oFieldLabel__c/fields/Sno__c.field-meta.xml
<CustomField>
    <fullName>Sno__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Sno</label>
    <type>AutoNumber</type>
</CustomField>