force-app/main/default/objects/oFieldLabel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sno__c</columns>
    <columns>FieldName__c</columns>
    <columns>FieldLabel__c</columns>
    <columns>Country_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>